--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <nav>
             <div class="nav-links" id="navLinks">
                 <i class="fa fa-times" onclick="hideMenu()"></i>
-                <a href="index.html"><img src="images/1.jpg"></a>
+                <a href="index.html"><img src="images/logo.jpg"></a>
                 <ul>
                     <li><a href="#homes">HOME</a></li>
                     <li><a href="#aboutUs">ABOUT</a></li>
@@ -28,8 +28,8 @@
         </nav>
         <section class="slide-show" id="homes">
             <div>
-                <img src="images/01.jpg" class="slide">
-                <img src="images/02.jpg" class="slide">
+                <img src="images/slide1.jpg" class="slide">
+                <img src="images/slide2.jpg" class="slide">
                 <script src="js/Pahanvila.js"></script>
                 <hr>
                 <br>
@@ -49,19 +49,19 @@
         
         <div class="acco-row">
             <div class="acco-col">    
-                <img src="images/03.jpg">
+                <img src="images/room1.jpg">
                     <h3>Rooms</h3>
             </div>
             <div class="acco-col">
-                <img src="images/04.jpg">
+                <img src="images/room2.jpg">
                 <h3>Dining Area</h3>
             </div>
             <div class="acco-col">
-                <img src="images/05.JPG">
+                <img src="images/room3.JPG">
                 <h3>Living Area</h3>
             </div>
             <div class="acco-col">
-                <img src="images/06.JPG">
+                <img src="images/room4.JPG">
                 <h3>Other</h3>
             </div>
         </div>
