--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <li><a href="#rooms">ROOMS</a></li>
                     <li><a href="#facilities">FACILITIES</a></li>
                     <li><a href="#contactUS">CONTACT</a></li>
-                    <li><a href="#contactUS">LOCATION</a></li>
+                    <li><a href="#near">LOCATION</a></li>
                     <li><button type="button" value="BookNow" onClick="location.href='https://www.booking.com/hotel/lk/pahan-villa-wadduwa.en-gb.html' ">BOOK NOW</button></li>
                 </ul>
             </div>
@@ -49,7 +49,7 @@
         
         <div class="acco-row">
             <div class="acco-col">    
-                <img src="images/room1.jpg">
+                <img src="images/room1.png">
                     <h3>Rooms</h3>
             </div>
             <div class="acco-col">
