--- a/index.html
+++ b/index.html
@@ -53,15 +53,15 @@
                     <h3>Rooms</h3>
             </div>
             <div class="acco-col">
-                <img src="images/room2.jpg">
+                <img src="images/room2.png">
                 <h3>Dining Area</h3>
             </div>
             <div class="acco-col">
-                <img src="images/room3.JPG">
+                <img src="images/room3.png">
                 <h3>Living Area</h3>
             </div>
             <div class="acco-col">
-                <img src="images/room4.JPG">
+                <img src="images/room4.png">
                 <h3>Other</h3>
             </div>
         </div>
