--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <header>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pahan Villa</title>
-    <link rel="stylesheet" href="styles/Pahanvilanew.css">
+    <link rel="stylesheet" href="styles/Pahanvila.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://fonts.googleapis.com/css2?family=Itim&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.2.1/css/fontawesome.min.css" integrity="sha384-QYIZto+st3yW+o8+5OHfT6S482Zsvz2WfOzpFSXMF9zqeLcFV0/wlZpMtyFcZALm" crossorigin="anonymous">
@@ -121,7 +121,7 @@
             </div>
             <div class="contact-col" id="locations">
                 <h2>Location</h2>
-                <p><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3962.984877834739!2d79.93238641379727!3d6.648795423541032!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ae2481db5e77ac3%3A0x507445bc558558d4!2sPahan%20Villa!5e0!3m2!1sen!2slk!4v1678469291389!5m2!1sen!2slk"  style="border:0;padding-right: 20px; padding-top: 10px;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></p>
+                <p><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3962.984877834739!2d79.93238641379727!3d6.648795423541032!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ae2481db5e77ac3%3A0x507445bc558558d4!2sPahan%20Villa!5e0!3m2!1sen!2slk!4v1678469291389!5m2!1sen!2slk"  style="border:0;padding-right: 20px; padding-top: 10px;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"  ></iframe></p>
             </div>
             
         </div>
