--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <header>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pahan Villa</title>
-    <link rel="stylesheet" href="styles/Pahanvila.css">
+    <link rel="stylesheet" href="styles/Pahanvilanew.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://fonts.googleapis.com/css2?family=Itim&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.2.1/css/fontawesome.min.css" integrity="sha384-QYIZto+st3yW+o8+5OHfT6S482Zsvz2WfOzpFSXMF9zqeLcFV0/wlZpMtyFcZALm" crossorigin="anonymous">
@@ -20,7 +20,7 @@
                     <li><a href="#rooms">ROOMS</a></li>
                     <li><a href="#facilities">FACILITIES</a></li>
                     <li><a href="#contactUS">CONTACT</a></li>
-                    <li><a href="#near">LOCATION</a></li>
+                    <li><a href="#location">LOCATION</a></li>
                     <li><button type="button" value="BookNow" onClick="location.href='https://www.booking.com/hotel/lk/pahan-villa-wadduwa.en-gb.html' ">BOOK NOW</button></li>
                 </ul>
             </div>
@@ -126,7 +126,7 @@
             
         </div>
     </section>
-     <section class="near" id="near">
+     <section class="near" id="location">
         <div>
             <h1>Near by Places</h1>
             <hr class="nearhr">
